# LSP-MCP

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  DOCKER.md  Dockerfile  LICENSE  README.md  docker-compose.yml  ghc-mcp.cabal  index.ts  lsp-demo.mjs  lsp-demo2.mjs  lsp-demo3.mjs  lsp-mcp.cabal  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
app/: Server.hs
docs/: CONTEXT.md  architecture.md  lsp-conformance.md  multi-lang-test-expansion.md  tools.md
docs/IMPL/: IMPL-lsp-additional-methods.yaml  IMPL-lsp-edit-and-nav.yaml  IMPL-lsp-missing-methods.yaml  IMPL-multi-lang-tier2.yaml
docs/IMPL/complete/: IMPL-lsp-additional-methods.yaml  IMPL-lsp-edit-and-nav.yaml  IMPL-lsp-missing-methods.yaml
src/: lspClient.ts
src/GHC/: MCP.hs
src/extensions/: haskell.ts  index.ts
src/logging/: index.ts
src/prompts/: index.ts
src/resources/: index.ts
src/shared/: utils.ts  waitForDiagnostics.ts
src/tools/: index.ts
src/types/: index.ts
test/: Test.hs  multi-lang.test.js  prompts.test.js  typescript-lsp.test.js  waitForDiagnostics.test.js
test/fixtures/c/: compile_commands.json  person.c
