cabal-version:      2.2
name:               ghc-mcp
version:            0.1.0.0
license:            LicenseRef-AllRightsReserved
author:             Matthias Pall Gissurarson
maintainer:         mpg@mpg.is
category:           MCP

library
  default-language:
    Haskell2010
  hs-source-dirs:
    src
  exposed-modules:
    GHC.MCP
  build-depends:
      base >=4.18 && <4.19

executable ghc-mcp
  default-language:
    Haskell2010
  default-extensions:
    ImportQualifiedPost
  hs-source-dirs:
    app
  main-is:
    Server.hs
  build-depends:
      base >=4.18 && <4.19
    , directory
    , filepath
    , unix
    , text
    , text-rope >= 0.2 && < 0.3
    , aeson
    , bytestring
    , unordered-containers
    , lsp
    , lsp-types
    , mtl
    , lens
    , hslogger
    , optparse-applicative
